2021-09-28  Charlie Zender  <zender@uci.edu>

	* PPQ: fix <float.h> and promote mnt_log10_tbl to double for MSVC

	* NCO 5.0.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.3-alpha02: Infrastructure';git push
	git tag -a 5.0.3-alpha02 -m 'ppc dgr';git push --tags

2021-09-27  Charlie Zender  <zender@uci.edu>

	* PPQ: implement draft Digit Rounding procedure using DCG19 algorithm

	* NCO 5.0.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.3-alpha01: General Sherman';git push
	git tag -a 5.0.3-alpha01 -m 'ncremap mpi_nbr_usr, E3SMU=SYSTEM, alg_typ=tempest fixes, otherwise functionally identical to 5.0.2';git push --tags

2021-09-26  Charlie Zender  <zender@uci.edu>

	* ncremap add conda create environment hint for MOAB

	* ncremap might add 2&>1 to --devnull to quiet mbconvert output

	* ncremap fix mbconvert options for alg_typ='tempest'

	* ncremap fix false-positive test result due to unquoted mpi_nbr_usr

2021-09-25  Charlie Zender  <zender@uci.edu>

	* ncremap only replace TR with mbtempest if mpi_nbr is set, not	when E3SMU=SYSYEM

2021-09-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2: moab, mem_mb=0, mss_val_cmp_dbl rgr/ntp, udu rcd, .h5m cnv/prt, mpi_nbr, nsx_alg, var_lst rx, ppq refactor, intel omp';git push
	git tag -a 5.0.2 -m 'Leptoukh';git push --tags

2021-09-23  Charlie Zender  <zender@uci.edu>

	* Fix ncoGrammer.g reference in Makefile.old

	* NCO 5.0.2-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.2-beta01: Zyrtec';git push
	git tag -a 5.0.2-beta01 -m 'fix wgt_opt, ncoGrammar.g, MOAB doc';git push --tags

	* ncremap document unsupported MOAB algorithms

	* ncremap print info messages when selected output type not available for map-file

	* ncremap remove excess MBT debugging information

	* Update nco.texi and documentation for MOAB

2021-09-23  henry Butowsky  <henryb@hush.com>
