@@ -452,6 +452,11 @@ variables:
         ppc_hgr:long_name = "Precision-Preserving Compression, higher precision";
         ppc_hgr:purpose = "test --ppc switches";
 
+	float ppc_tst(time);
+        ppc_tst:long_name = "Precision-Preserving Compression, single precision tests";
+        ppc_tst:purpose = "test --ppq";
+        ppc_tst:original_values="0.0,_,0.1234567,-0.1234567,64,-64,123456789e25,123456789e-25,3.1415926535897932384626433832795029,-3.1415926535897932384626433832795029";
+
 	char md5_a;
 	md5_a:long_name = "the letter a";
 	md5_a:purpose = "String with known MD5 digest"; 
@@ -1576,6 +1581,7 @@ data:
 	ppc_bgr_scl=1234567890e11;
 	ppc_hgh=0.00000000000000000000,0.10000000000000000000,0.12000000000000000000,0.123000000000000000000,0.1234000000000000000,0.12345000000000000000,0.123456000000000000000000,0.12345670000000000000000000,0.123456780000000000000,0.123456789000000000000;
 	ppc_hgr=0.123456789000000000000,0.1234567890100000000000,0.1234567890120000000000,0.12345678901230000000000,0.123456789012340000000,0.12345678901234500000,0.12345678901234560000,0.12345678901234567000,0.12345678901234567800,0.12345678901234567890;
+        ppc_tst=0.0,_,0.1234567,-0.1234567,64,-64,123456789e25,123456789e-25,3.1415926535897932384626433832795029,-3.1415926535897932384626433832795029;
 	ppc_zro_flt=0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0;
 	ppc_zro_dbl=0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0;
 	ppc_zro_int=0,0,0,0,0,0,0,0,0,0;
